--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -2,7 +2,8 @@
 
 :root {
     font-family: 'Kumbh Sans';
-    --orange:  #eb9150;
+    --orange:  #ff7d1b;
+    --lightorange: #ffd9b2;
     --paleorange: hsl(25, 100%, 94%);
     --darkblue:  hsl(220, 13%, 13%);
     --darkgrey: hsl(219, 9%, 45%);
@@ -11,18 +12,22 @@
     --black: hsl(0, 0%, 0%, 75%);
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     background: white;
     display: flex;
     min-height: 100vh;
-    margin:0%;
 }
-
-
 
 /* nav styles start here*/
 
 header {
+    background-color: white;
     text-align: left;
     position: fixed;
     width: 100%;
@@ -39,12 +44,10 @@ header {
     margin-top: 21px;
     height: 20px;
     width: auto;
-   
 }
 
-nav {
-    position: absolute;
-    text-align: left;
+.nav-bar {
+    position: fixed;
     top: 0;
     left: 0;
     background: white;
@@ -52,72 +55,81 @@ nav {
     height: 100vh;
     z-index: 999;
     display: none;
-    
+    transition: 2s ease-in-out;
 }
 
-nav ul {
-    padding: 0;
-    list-style: none;
+.nav-menu {
     margin-top: 80px;
 }
 
-nav li {
+.nav-menu li {
+    list-style: none;
     margin-top: 30px;
     font-weight: 700;
     margin-left: 1.5em;
 }
 
-nav a {
+.nav-menu a {
     text-decoration: none;
     color: var(--darkblue);
-    margin: 0;
 }
 
-nav a:hover {
-    color: grey;
+.nav-menu a:hover {
+    color: var(--grey);
 }
 
-.nav-toggle {
-    display: none;
-}
-
-.nav-toggle-label {
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin-left: 24px;
-    margin-top: 24px;
-    z-index: 999;
-}
-
-.close-menu {
-    display: none;
-}
-
-.nav-toggle:checked ~ nav {
+.nav-bar.active {
     display: block;
-    
+}
+
+.hamburger {
+    display: block;
+    position: fixed;
+    left: 24px;
+    top: 22px;
+    cursor: pointer;
+    z-index: 1000;
+}
+
+.bar {
+    background-color: var(--darkgrey);
+    display: block;
+    width: 16px;
+    height: 3px;
+    margin: 3px auto;
+    transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+}
+
+.hamburger.active .bar:nth-child(2) {
+    opacity: 0;
+}
+
+.hamburger.active .bar:nth-child(1) {
+    transform: translateY(6px) rotate(45deg);
+}
+
+.hamburger.active .bar:nth-child(3) {
+    transform: translateY(-6px) rotate(-45deg);
 }
 
 .cart-avatar {
-    top: 0;
-    right: 0;
-    margin: 0;
-    margin-top: 15px;
-    margin-right: 24px;
     position: absolute;
+    top: 20px;
+    right: 24px;
 }
 
 .avatar {
-    height: 24px;
+    height: 26px;
     width: auto;
-    padding: 5px;
 }
 
 .cart-top {
-    padding: 5px;
-    height: 20px;
+    height: 22px;
     width: auto;
+    margin-right: 22px;
 }
 
 .overlay {
@@ -128,26 +140,27 @@ nav a:hover {
     display: none;
 }
 
-.overlay.visible {
+.overlay.active {
     display: block;
 }
 
 .container {
     position: absolute;
     margin-top: 69px;
-}
-
-.slide-gallery {
-    position: absolute;
-    height: 300px;
-    overflow: hidden;
-    position: relative;
-    object-fit: contain;
-}
-
-.slide-gallery img {
     width: 100%;
-    object-fit: contain;
+}
+
+.gallery {
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    height: 300px;
+    max-width: 100%;
+    background: url("../images/image-product-1.jpg") no-repeat center center;
+    background-size: cover; 
+    -webkit-background-size: cover; 
+    -moz-background-size: cover; 
+    -o-background-size: cover;
 }
 
 .arrows {
@@ -155,48 +168,67 @@ nav a:hover {
     top: 135px;
     z-index: 998;
     background-color: white;
-    height: 30px;
-    width: 30px;
-    padding: 6px;
+    height: 40px;
+    width: 40px;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
+}
+
+.arrows img {
+    height: 14px;
+    width: auto;
 }
 
 .previous-img {
-    left: 24px;
+    left: 20px;
 }
 
 .next-img {
     right: 24px;
 }
 
-
 .card {
-    padding: 26px;
+    display: block;
+    margin: 26px;
+    margin-bottom: 0px;
 }
 
 .s-comp {
+    margin-bottom: 22px;
     font-size: 10pt;
-    color: var(--orange);
+    color: #eb9a31;
     font-weight: 800;
+    letter-spacing: 1px;
 }
 
 .s-header {
+    margin-bottom: 22px;
+    position: relative;
     font-weight: 700;
+    font-size: 22pt;
+    bottom: 10px;
 }
 
 .s-descrip {
+    margin-bottom: 39px;
+    position: relative;
     color: var(--darkgrey);
     line-height: 1.6;
+    bottom: 13px;
+    font-weight: 500;
 }
 
 .prices {
+    position: relative;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    bottom: 30px;
+    margin-bottom: 25px;
 }
-
 
 .price-new {
     font-weight: 700;
@@ -212,13 +244,76 @@ nav a:hover {
     border-radius: 20%;
     text-align: center;
     font-weight: 700;
-    line-height: 1.6;
- 
+    line-height: 1.75;
+    margin-right: 115px;
 }
 
 .price-original {
     color: var(--grey);
     text-decoration: line-through;
     font-weight: 700;
-    font-size: 1.5em; 
+    font-size: 1.1em; 
 }
+
+.cart-btns {
+    position: relative;
+    bottom: 4vh;
+}
+
+.cart {
+    background-color: var(--lightgrey);
+    font-family: 'Kumbh Sans';
+    width: 90%;
+    height: 56px;
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0 auto;
+    margin-bottom: 16px;
+    border: 0px;
+    border-radius: 10px;
+    font-weight: 700;
+    font-size: 1em;
+}
+
+.minus {
+    position: relative;
+    right: 30px;
+}
+
+.plus {
+    position: relative;
+    left: 30px;
+}
+
+.add-cart-btn {
+    background-color: var(--orange);
+    font-family: 'Kumbh Sans';
+    color: white;
+    width: 90%;
+    height: 56px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    border: 0px;
+    border-radius: 10px;
+    font-size: 1em;
+    font-weight: 700;
+    box-shadow: 0px 20px 50px 0px var(--lightorange);
+}
+
+.add-cart-btn p {
+    margin-left: 7px;
+    letter-spacing: 0.5px;
+}
+
+.cart-bottom {
+    filter: brightness(0) invert(1);
+    height: 16px;
+    width: auto;
+    margin-right: 7px;
+}
+
