--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -22,6 +22,7 @@ body {
     background: white;
     display: flex;
     min-height: 100vh;
+    width: 100%;
 }
 
 /* nav styles start here*/
@@ -150,7 +151,7 @@ header {
     width: 100%;
 }
 
-.gallery {
+.slide-gallery {
     justify-content: center;
     align-items: center;
     overflow: hidden;
@@ -263,7 +264,7 @@ header {
 .cart {
     background-color: var(--lightgrey);
     font-family: 'Kumbh Sans';
-    width: 90%;
+    width: 100%;
     height: 56px;
     position: relative;
     display: flex;
@@ -291,7 +292,7 @@ header {
     background-color: var(--orange);
     font-family: 'Kumbh Sans';
     color: white;
-    width: 90%;
+    width: 100%;
     height: 56px;
     position: relative;
     display: flex;
@@ -317,3 +318,424 @@ header {
     margin-right: 7px;
 }
 
+/*------------------------------------------------media queries-----*/
+
+/*--------------desktop styling-----*/
+@media only screen and (min-width: 700px) {
+    body {
+        background: white;
+        display: flex;
+        min-height: 100vh;
+        margin-left: 15%;
+        overflow: hidden;
+    }
+
+    header {
+        display: grid;
+        grid-template-columns: 33% 33% 33%;
+        position: fixed;
+        height: 113px;
+        width: 70%;
+        margin-left: 0;
+        justify-content: space-between;
+        align-items: center;
+        border-bottom: 3px solid var(--lightgrey);
+        z-index: 999;
+    }
+
+    .logo {
+        all: unset;
+        position: absolute;
+        display: flex;
+        grid-column:  1/ 1;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
+        margin-left: 0px;
+        margin-top: 0px;
+        height: 20px;
+        width: auto;
+    }
+    
+    .nav-bar {
+        position: relative;
+        all: unset;
+        z-index: 999;
+        grid-column:  1/ 3;
+        margin: 0 auto;
+    }
+    
+    .nav-menu {
+        position: relative;
+        height: 0;
+        transition: unset;
+        all: unset;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 50px;
+        margin: 0 auto;
+    }
+    
+    .nav-menu li {
+        list-style: none;
+        margin-top: 0px;
+        margin-left: 0px;
+        font-weight: 400;
+    }
+    
+    .nav-menu a {
+        text-decoration: none;
+        color: var(--darkgrey);
+    }
+    
+    .nav-menu a:hover {
+        color: var(--grey);
+    }
+    
+    .nav-bar.active {
+        display: block;
+    }
+    
+    .hamburger {
+        display: none;
+    }
+   
+    .cart-avatar {
+        position: relative;
+        display: flex;
+        grid-column:  3/ 3;
+        justify-content: flex-end;
+        align-items: center;
+        top: 0px;
+        right: 0px;
+    }
+    
+    .avatar {
+        height: 50px;
+        width: auto;
+    }
+    
+    .cart-top {
+        height: 20px;
+        width: auto;
+        margin-right: 46px;
+    }
+    
+    .overlay {
+        display: none;
+    }
+    
+    .container {
+        position: relative;
+        margin: 0;
+        top: 103px;
+        right: 2vw;
+        height: 700px;
+        width: 80%;
+        display: grid;
+        grid-template-columns: 50% 50%;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+    }
+
+    .gallery {
+        position: relative;
+        display: block;
+        grid-column:  1/ 1;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+        right: 125px;
+        top: 50px;
+    }
+
+    .arrows {
+        display: none;
+    }
+
+    .slide-gallery {
+        position: relative;
+        height: 450px;
+        width: 450px;
+        border-radius: 20px;
+        justify-content: center;
+        align-items: center;
+        background: url("../images/image-product-1.jpg") no-repeat center center;
+        background-size: cover; 
+        -webkit-background-size: cover; 
+        -moz-background-size: cover; 
+        -o-background-size: cover;
+    }
+
+    .thumb-slide {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        top: 30px;
+        gap: 30px;
+        grid-row:  2/ 2;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .thumb-img {
+        height: 90px;
+        width: 90px;
+        background-color: orange;
+        border-radius: 10px;
+    }
+
+    .thumb-img.active {
+        border: 3px solid #ff7b1f;
+        opacity: 0.5;
+    }
+
+    .thumb-img:nth-child(1) {
+        background: url("../images/image-product-1-thumbnail.jpg") no-repeat center center;
+        background-size: cover; 
+        -webkit-background-size: cover; 
+        -moz-background-size: cover; 
+        -o-background-size: cover;
+    }
+
+    .thumb-img:nth-child(2) {
+        background: url("../images/image-product-2-thumbnail.jpg") no-repeat center center;
+        background-size: cover; 
+        -webkit-background-size: cover; 
+        -moz-background-size: cover; 
+        -o-background-size: cover;
+    }
+
+    .thumb-img:nth-child(3) {
+        background: url("../images/image-product-3-thumbnail.jpg") no-repeat center center;
+        background-size: cover; 
+        -webkit-background-size: cover; 
+        -moz-background-size: cover; 
+        -o-background-size: cover;
+    }
+
+    .thumb-img:nth-child(4) {
+        background: url("../images/image-product-4-thumbnail.jpg") no-repeat center center;
+        background-size: cover; 
+        -webkit-background-size: cover; 
+        -moz-background-size: cover; 
+        -o-background-size: cover;
+    }
+
+
+    .gallery-modal {
+        background-color: var(--black);
+        position: fixed;
+        display: block;
+        justify-content: center;
+        align-items: center;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 1000;
+        margin: 0 auto;
+    }
+
+    .gallery-modal .slide-gallery {
+        position: relative;
+        margin: 0 auto;
+        width: 545px;
+        height: 545px;
+        top: 150px;
+    }
+
+    .gallery-modal .thumb-slide {
+        position: relative;
+        top: 180px;
+        gap: 35px;
+    }
+
+    .gallery-modal .thumb-slide .thumb-img {
+        height: 110px;
+        width: 110px;
+    }
+
+    .gallery-modal .arrows {
+        position: relative;
+        top: 0px;
+        margin: 0 auto;
+        z-index: 1001;
+        background-color: white;
+        height: 40px;
+        width: 40px;
+        border-radius: 50%;
+        display: flex;
+    }
+
+    .gallery-modal .arrows img {
+        height: 14px;
+        width: auto;
+    }
+    
+    .gallery-modal .previous-img {
+        left: -275px;
+    }
+    
+    .gallery-modal .next-img {
+        left: 275px;
+    }
+    
+
+    
+
+
+
+    .card {
+        position: relative;
+        display: flex;
+        grid-column:  2/ 2;
+        justify-content: flex-start;
+        align-items: flex-start;
+        display: block;
+        margin: 0;
+        width: 60%;
+        top: 5vh;
+        right: 20%;
+    }
+    
+    .s-comp {
+        margin-bottom: 22px;
+        font-size: 10pt;
+        color: #eb9a31;
+        font-weight: 800;
+        letter-spacing: 1px;
+    }
+    
+    .s-header {
+        margin-bottom: 22px;
+        position: relative;
+        font-weight: 700;
+        font-size: 35pt;
+        bottom: 10px;
+    }
+    
+    .s-descrip {
+        margin-bottom: 39px;
+        position: relative;
+        color: var(--darkgrey);
+        line-height: 1.6;
+        bottom: 13px;
+        font-weight: 400;
+    }
+    
+    .prices {
+        position: relative;
+        display: block;
+        justify-content: space-between;
+        align-items: center;
+        bottom: 30px;
+        margin-bottom: 25px;
+    }
+    
+    .price-new {
+        font-weight: 700;
+        font-size: 1.75em;
+        line-height: 1.6; 
+    }
+    
+    .price-discount {
+        position: absolute;
+        width: 50px;
+        height: 27px;
+        border-radius: 8px;
+        text-align: center;
+        font-weight: 700;
+        line-height: 1.75;
+        top: 9px;
+        left: 120px;
+    }
+    
+    .price-original {
+        position: relative;
+        color: var(--grey);
+        text-decoration: line-through;
+        font-weight: 700;
+        font-size: 1.1em; 
+    }
+    
+    .cart-btns {
+        position: relative;
+        display: flex;
+        bottom: 0;
+    }
+    
+    .cart {
+        background-color: var(--lightgrey);
+        font-family: 'Kumbh Sans';
+        width: 40%;
+        height: 56px;
+        position: relative;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        margin: 0 auto;
+        margin-bottom: 16px;
+        border: 0px;
+        border-radius: 10px;
+        font-weight: 700;
+        font-size: 1em;
+    }
+    
+    .minus {
+        position: relative;
+        right: 10px;
+    }
+    
+    .plus {
+        position: relative;
+        left: 10px;
+    }
+    
+    .add-cart-btn {
+        width: 60%;
+        height: 56px;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+        margin-left: 16px;
+        border: 0px;
+        border-radius: 10px;
+        font-size: 1em;
+        font-weight: 700;
+        box-shadow: 0px 20px 50px 0px var(--lightorange);
+    }
+    
+    .add-cart-btn p {
+        margin-left: 7px;
+        letter-spacing: 0.5px;
+    }
+    
+    .cart-bottom {
+        filter: brightness(0) invert(1);
+        height: 16px;
+        width: auto;
+        margin-right: 7px;
+    }
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+}
