--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -178,10 +178,12 @@ header {
     position: fixed;
     display: none;
     align-items: center;
+    z-index: 2000;
 }
 
 .cart-container.visible {
     display: block;
+    z-index: 2000;
     /*animation: fadeIn 5s linear;
     -webkit-animation: fadeIn 100ms linear;
     -moz-animation: fadeIn 100ms linear;
@@ -298,47 +300,66 @@ header {
     width: 100%;
 }
 
+
 .slide-gallery {
+    position: relative;
+    display: flex;
+    height: 350px;
+    max-width: 100%;
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    height: 300px;
-    max-width: 100%;
-    background: url("../images/image-product-1.jpg") no-repeat center center;
+}
+
+.slide-gallery img {
+    display: flex;
+    height: 420px;
+    max-width: 200%;
+    background-repeat: no-repeat;
     background-size: cover; 
     -webkit-background-size: cover; 
     -moz-background-size: cover; 
     -o-background-size: cover;
 }
 
-.gallery-modal{
+.thumb-slide {
     display: none;
 }
+
 .arrows {
     position: absolute;
-    top: 135px;
-    z-index: 998;
-    background-color: white;
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
+    margin: 0 auto;
+    background-color: white;
+    top: 135px;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    z-index: 1000;
+    cursor: pointer;
 }
 
 .arrows img {
-    height: 14px;
+    height: 15px;
     width: auto;
+    z-index: 1000;
 }
 
 .previous-img {
     left: 20px;
+    z-index: 1000;
 }
 
 .next-img {
     right: 24px;
+    z-index: 1000;
+}
+
+.gallery-modal{
+    display: none;
 }
 
 .card {
@@ -583,9 +604,6 @@ header {
         transform: scale(1, 1);
     }
 
-   
-
-
     .nav-bar.active {
         display: block;
     }
@@ -752,10 +770,6 @@ header {
         top: 50px;
     }
 
-    .arrows {
-        display: none;
-    }
-
     .slide-gallery {
         position: relative;
         height: 450px;
@@ -763,11 +777,18 @@ header {
         border-radius: 20px;
         justify-content: center;
         align-items: center;
-        background: url("../images/image-product-1.jpg") no-repeat center center;
         background-size: cover; 
         -webkit-background-size: cover; 
         -moz-background-size: cover; 
         -o-background-size: cover;
+        cursor: pointer;
+    }
+
+    .slide-gallery img {
+        height: 450px;
+        width: 450px;
+        border-radius: 20px;
+
     }
 
     .thumb-slide {
@@ -787,103 +808,157 @@ header {
         width: 90px;
         background-color: orange;
         border-radius: 10px;
+        cursor: pointer;
+    }
+
+    .thumb-img:hover {
+        opacity: 0.5;
+        border: 2px solid #b44e05;
     }
 
     .thumb-img.active {
-        border: 3px solid #ff7b1f;
         opacity: 0.5;
-    }
-
-    .thumb-img:nth-child(1) {
-        background: url("../images/image-product-1-thumbnail.jpg") no-repeat center center;
-        background-size: cover; 
-        -webkit-background-size: cover; 
-        -moz-background-size: cover; 
-        -o-background-size: cover;
-    }
-
-    .thumb-img:nth-child(2) {
-        background: url("../images/image-product-2-thumbnail.jpg") no-repeat center center;
-        background-size: cover; 
-        -webkit-background-size: cover; 
-        -moz-background-size: cover; 
-        -o-background-size: cover;
-    }
-
-    .thumb-img:nth-child(3) {
-        background: url("../images/image-product-3-thumbnail.jpg") no-repeat center center;
-        background-size: cover; 
-        -webkit-background-size: cover; 
-        -moz-background-size: cover; 
-        -o-background-size: cover;
-    }
-
-    .thumb-img:nth-child(4) {
-        background: url("../images/image-product-4-thumbnail.jpg") no-repeat center center;
-        background-size: cover; 
-        -webkit-background-size: cover; 
-        -moz-background-size: cover; 
-        -o-background-size: cover;
+        border: 2px solid #b44e05;
     }
 
     .gallery-modal {
-        background-color: var(--black);
         position: fixed;
         display: none;
         justify-content: center;
         align-items: center;
+        margin: 0 auto;
+        left: 0;
+        right: 0;
+        z-index: 1000;
+    }
+
+    #bigImgPop{
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+        height: 550px;
+        width: 550px;
+        border-radius: 20px;
+        background-size: cover; 
+        -webkit-background-size: cover; 
+        -moz-background-size: cover; 
+        -o-background-size: cover;
+        cursor: pointer;
+        z-index: 1001 !important;
+    }
+
+    .slide-img{
+        position: absolute;
+        display: none;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+        height: 550px;
+        width: 550px;
+        border-radius: 20px;
+        background-size: cover; 
+        -webkit-background-size: cover; 
+        -moz-background-size: cover; 
+        -o-background-size: cover;
+        cursor: pointer;
+        z-index: 1001 !important;
+    }
+
+    .thumb-slide-pop {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+        top: 30px;
+        gap: 30px;
+        z-index: 1001 !important;
+    }
+
+    .thumb-img-pop {
+        height: 90px;
+        width: 90px;
+        background-color: white;
+        border-radius: 10px;
+        cursor: pointer;
+    }
+
+    .thumb-img-pop:hover {
+        opacity: 0.3;
+        border: 2px solid #b44e05;
+    }
+
+    .modal-bg {
+        background-color: var(--black);
+        position: fixed;
+        display: block;
         top: 0;
         left: 0;
         right: 0;
         bottom: 0;
-        z-index: 1000;
-        margin: 0 auto;
     }
 
-    .gallery-modal .slide-gallery {
-        position: relative;
-        margin: 0 auto;
-        width: 545px;
-        height: 545px;
-        top: 150px;
+    /*
+    .arrows img:hover {
+        filter: invert(56%) sepia(13%) saturate(5686%) hue-rotate(347deg) brightness(103%) contrast(102%);
     }
+    */
 
-    .gallery-modal .thumb-slide {
-        position: relative;
-        top: 180px;
-        gap: 35px;
-    }
-
-    .gallery-modal .thumb-slide .thumb-img {
-        height: 110px;
-        width: 110px;
-    }
-
-    .gallery-modal .arrows {
-        position: relative;
-        top: 0px;
-        margin: 0 auto;
-        z-index: 1001;
-        background-color: white;
-        height: 40px;
-        width: 40px;
-        border-radius: 50%;
+    .arrows-pop {
+        position: absolute;
         display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        background-color: white;
+        top: 45%;
+        height: 55px;
+        width: 55px;
+        border-radius: 50%;
+        z-index: 1002;
+        cursor: pointer;
     }
-
-    .gallery-modal .arrows img {
-        height: 14px;
+    
+    .arrows-pop img {
+        height: 20px;
         width: auto;
     }
     
-    .gallery-modal .previous-img {
-        left: -275px;
+    .previous-img-pop {
+        left: 34vw;
     }
     
-    .gallery-modal .next-img {
-        left: 275px;
+    .next-img-pop {
+        right: 34vw;
     }
+
+    .arrows-pop img:hover {
+        filter: invert(56%) sepia(13%) saturate(5686%) hue-rotate(347deg) brightness(103%) contrast(102%);
+    }
+
+    .arrows {
+        display: none;
+    }
+
     
+    .close-modal {
+        position: relative;
+        display: flex;
+        margin: 20px auto;
+        right: -260px;
+        filter: brightness(300%);
+        height: 25px;
+        width: 25px;
+        cursor: pointer;
+        z-index: 1002;
+    }
+
+    .close-modal:hover {
+        filter: invert(56%) sepia(13%) saturate(5686%) hue-rotate(347deg) brightness(103%) contrast(102%);
+    }
+
     .card {
         position: relative;
         display: flex;
