--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -300,26 +300,18 @@ header {
     width: 100%;
 }
 
-
 .slide-gallery {
     position: relative;
     display: flex;
     height: 350px;
-    max-width: 100%;
-    justify-content: center;
-    align-items: center;
+    width: 100vw;
     overflow: hidden;
 }
 
 .slide-gallery img {
     display: flex;
-    height: 420px;
-    max-width: 200%;
-    background-repeat: no-repeat;
-    background-size: cover; 
-    -webkit-background-size: cover; 
-    -moz-background-size: cover; 
-    -o-background-size: cover;
+    height: 100%;
+    min-width: 100%;
 }
 
 .thumb-slide {
