--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -122,7 +122,7 @@ header {
     justify-content: center;
     align-items: center;
     bottom: 3px;
-    left: 124px;
+    right: -29%;
 }
 
 .avatar {
@@ -1089,5 +1089,168 @@ header {
         width: auto;
         margin-right: 7px;
     }
+}
+
+
+/*---------smaller mobile sizes [portait]-----*/
+@media only screen and (max-width : 375px) and (orientation : portrait){
+
+    header {
+        background-color: white;
+        text-align: left;
+        position: fixed;
+        width: 100%;
+        height: 65px;
+        z-index: 2000;
+        display: flex;
+    }
+
+    .cart-avatar {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        bottom: 3px;
+        right: -25%;
+    }
+
+    .slide-gallery {
+        position: relative;
+        display: flex;
+        height: 300px;
+        width: 100vw;
+        overflow: hidden;
+    }
+
+    .slide-gallery img {
+        display: flex;
+        height: 110%;
+        min-width: 100%;
+    }
+
+    .price-new {
+        font-weight: 700;
+        font-size: 1.5em;
+        line-height: 1.6; 
+    }
+    
+    .price-discount {
+        color: var(--orange);
+        background-color: var(--paleorange);
+        width: 50px;
+        height: 27px;
+        border-radius: 20%;
+        text-align: center;
+        font-weight: 700;
+        line-height: 1.75;
+        margin-right: 115px;
+    }
+    
+    .price-original {
+        color: var(--grey);
+        text-decoration: line-through;
+        font-weight: 700;
+        font-size: 1em; 
+    }
+}
+
+@media only screen and (max-width : 320px) and (orientation : portrait){
+
+    header {
+        background-color: white;
+        text-align: left;
+        position: fixed;
+        width: 100%;
+        height: 68px;
+        z-index: 2000;
+        display: flex;
+    }
+    
+    .logo {
+        position: unset;
+        text-align: left;
+        margin: 0;
+        margin-left: 56px;
+        margin-top: 21px;
+        height: 18px;
+        width: auto;
+    }
+    
+    .cart-avatar {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        bottom: 3px;
+        right: -15%;
+    }
+
+    .cart-content {
+        display: flex;
+        color: var(--darkgrey);
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+        font-size: 0.8em;
+        font-weight: 500;
+        line-height: 1.8;
+        padding: 5px;
+    }
+
+    .slide-gallery {
+        position: relative;
+        display: flex;
+        height: 250px;
+        width: 100vw;
+        overflow: hidden;
+    }
+
+    .slide-gallery img {
+        display: flex;
+        height: 120%;
+        min-width: 100%;
+    }
+
+    .arrows {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        margin: 0 auto;
+        background-color: white;
+        top: 115px;
+        height: 40px;
+        width: 40px;
+        border-radius: 50%;
+        z-index: 1000;
+        cursor: pointer;
+    }
+
+    .price-new {
+        font-weight: 700;
+        font-size: 1.5em;
+        line-height: 1.6; 
+    }
+    
+    .price-discount {
+        color: var(--orange);
+        background-color: var(--paleorange);
+        width: 50px;
+        height: 27px;
+        border-radius: 20%;
+        text-align: center;
+        font-weight: 700;
+        line-height: 1.75;
+        margin-right: 60px;
+    }
+
+    .price-original {
+        color: var(--grey);
+        text-decoration: line-through;
+        font-weight: 700;
+        font-size: 1em; 
+    }
+
 }
 
